# PocEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: FindGLFW3.cmake  FindGLM.cmake  FindGTest.cmake  FindVulkan.cmake
demos/demo-simple-window/: main.cpp
poc-engine/: game_engine.cpp  game_engine.hpp
shaders/: generate-shader-headers.bat  shader.vert
src/demos/demo-01-simple-window/: CMakeLists.txt  demo-01-simple-window.cpp  demo-01-simple-window.h
src/demos/demo-02-draw-simple-shape/: CMakeLists.txt  demo-02-draw-simple-shape.cpp  demo-02-draw-simple-shape.hpp
src/demos/demo-03-depth-test/: CMakeLists.txt  demo-03-depth-test.cpp  demo-03-depth-test.hpp
src/poc-engine/: CMakeLists.txt  constants.h  constants.hpp  debug.h  game_engine.cpp  platform.cpp  platform.h  poc-engine.cpp  poc-engine.h  poc-engine.hpp  poc.hpp
src/poc-engine/core/: logger.hpp  pimpl_ptr.hpp  poc-engine.hpp  scene.hpp
src/poc-engine/plateform/: platform.cpp  platform.hpp  window-glfw3.cpp  window.hpp
src/poc-engine/rendering/: graphic-api.cpp  graphic-api.hpp  graphic-vulkan.cpp  graphic-vulkan.h  graphic.cpp  graphic.h  mesh.hpp  rendering-system.cpp  rendering-system.h  rendering-system.hpp  vertex.hpp  window-glfw3.cpp  window.cpp  window.h
src/poc-engine/rendering/vulkan/: vulkan-api.cpp  vulkan-api.hpp  vulkan-buffer.cpp  vulkan-buffer.hpp  vulkan-command-pool.cpp  vulkan-command-pool.hpp  vulkan-device.cpp  vulkan-device.hpp  vulkan-graphic-api.cpp  vulkan-graphic-api.hpp  vulkan-image-view.cpp  vulkan-image-view.hpp  vulkan-image.cpp  vulkan-image.hpp  vulkan-instance.cpp  vulkan-instance.hpp  vulkan-physical-device.cpp  vulkan-physical-device.hpp  vulkan-pipeline.cpp  vulkan-pipeline.hpp  vulkan-render-pass.cpp  vulkan-render-pass.hpp  vulkan-render.cpp  vulkan-render.hpp  vulkan-scene.cpp  vulkan-scene.hpp  vulkan-surface.cpp  vulkan-surface.hpp  vulkan-swapchain.cpp  vulkan-swapchain.hpp
src/poc-engine/rendering/vulkan/shaders/: vulkan-shader-fragment.hpp  vulkan-shader-vertex.hpp
src/tests/: CMakeLists.txt  main.cpp
src/tools/bin2cpp/: CMakeLists.txt  bin2cpp.cpp
