set(TOOL_NAME bin2cpp)

file(GLOB_RECURSE TOOL_SRC_DIR
	${PROJECT_SOURCE_DIR}/tools/${TOOL_NAME}/*.hpp
	${PROJECT_SOURCE_DIR}/tools/${TOOL_NAME}/*.cpp)

add_executable(${TOOL_NAME} ${TOOL_SRC_DIR})

if(PLATFORM EQUAL 64)
	install(TARGETS ${TOOL_NAME} CONFIGURATIONS Debug DESTINATION ${CMAKE_SOURCE_DIR}/bin/debug)
	install(TARGETS ${TOOL_NAME} CONFIGURATIONS Release DESTINATION ${CMAKE_SOURCE_DIR}/bin/release)
elseif(PLATFORM EQUAL 32)
	install(TARGETS ${TOOL_NAME} CONFIGURATIONS Debug DESTINATION ${CMAKE_SOURCE_DIR}/bin32/debug)
	install(TARGETS ${TOOL_NAME} CONFIGURATIONS Release DESTINATION ${CMAKE_SOURCE_DIR}/bin32/release)
endif()
